two exportable functions

--- a/example.html
+++ b/example.html
@@ -8,6 +8,9 @@
     <script type="text/javascript" src="glue.js"></script>
 
     <script type="text/javascript">
+      var h = glue.h;
+      var setState = glue.setState;
+      
       var component1 = {
         state: {
           counter: 0
