--- a/example.html
+++ b/example.html
@@ -18,13 +18,11 @@
         render: function() {
           var self = this;
 
-          self.nodes = h('div', {}, [
+          return self.nodes = h('div', {}, [
             h('span', {}, `Component #1 value: ${self.state.counter}`),
             h('button', {onclick: setState.call(self, 'counter', self.state.counter + 1)}, '+'),
             h('button', {onclick: setState.call(self, 'counter', self.state.counter - 1)}, '-')
           ]);
-
-          return self.nodes;
         }
       };
 
@@ -35,13 +33,11 @@
         render: function() {
           var self = this;
 
-          self.nodes = h('div', {}, [
+          return self.nodes = h('div', {}, [
             h('span', {}, `Component #2 value: ${self.state.counter}`),
             h('button', {onclick: setState.call(self, 'counter', self.state.counter + 1)}, '+'),
             h('button', {onclick: setState.call(self, 'counter', self.state.counter - 1)}, '-')
           ]);
-
-          return self.nodes;
         }
       };
 
@@ -50,12 +46,10 @@
         render: function() {
           var self = this;
 
-          self.nodes = h('div', {}, [
+          return self.nodes = h('div', {}, [
             component1.render(),
             component2.render()
           ]);
-
-          return self.nodes;
         }
       };
 
